html 5 datalist tag implementation

--- a/iframe.css
+++ b/iframe.css
@@ -24,8 +24,9 @@ iframe:nth-of-type(3)
 .a{
     background-color: red;
     /* margin: 20px; */
-    margin-left: 100px;
-    margin-right: 100px;
+    width: 40px;
+    height: 20px;
+    margin: auto;
     text-align: center;
 
 }
